--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -8,7 +8,7 @@ Table \ref{table:results2} shows an attempt to increase the speedup. The size of
 
 The prefetcher is not able to determine the outcome of a combination before there's been at least one previos case of the same pattern. If all request deltas are unique, prefetches will never occur. This is especially clear in benchmark ammp shown in table \ref{table:results}. Without any proper analysis of the access patterns in the benchmark, it is hard to determine exactly how it pinpoints the weaknesses of the prefetcher. A good guess could be that pattern repetition rate is very low, while the lack of a program counter doesn't make much of a difference, since the DCPT performs pretty similarly. One huge difference that shouldn't go uncommented, is the amount of identified fetches our algorithm has compared to the DCPT. While the issued count is rather similar, the amount of attempted fetches is extreme. This is one of the points that we found the strangest during development and beta-testing; we did prefetches for almost every single memory access, and it would successfully predict the next address, but the next would be tagged as a miss, and the prefetch never reported as finished. The reason for this appears to be that every single fetch is a bit to slow, a theory which is supported by the fact that the missed prefetches actually show up as finished a bit later. A lot of experimenting was performed to figure out why this happened, and the conclusion is that the memory bus has a 30ns latency, while the time between memory accesses is 60ns. In order to get fetch a block, a signal has to be sent to the main memory, before the result is sent back, resulting in a 60ns delay plus lookup and storage overhead, which should be enough to push the result of the prefetch behind schedule. This results in a lot of issued prefetches and close to no pay-out.
 
-A general trend through all the tests is that the accuracy and IPC of our implementations is comparable to the DCPT, while the coverage is a lot poorer. This supports our theory of the limits the small combination pool gives us. A low coverage means that we had a lot of memory accesses without prefetching compared to good prefetches. This low coverage is probably mostly because we spend a lot of time just creating elements for new combinations, and therefore avoid prefetching. The fact that the algorithm only issues a prefetch when a pattern is recognized might penalize the coverage score a bit, while the accuracy should benefit from it. These are one of the few points where we feel we actually succeeded, and the intent of the algorithm actually is reflected in the results. 
+The DCPT boasts a 5.5\% speedup, as shown in table \ref{table:results3}. A general trend through all the tests is that the accuracy and IPC of our implementations is comparable to the DCPT, while the coverage is a lot poorer. This supports our theory of the limits the small combination pool gives us. A low coverage means that we had a lot of memory accesses without prefetching compared to good prefetches. This low coverage is probably mostly because we spend a lot of time just creating elements for new combinations, and therefore avoid prefetching. The fact that the algorithm only issues a prefetch when a pattern is recognized might penalize the coverage score a bit, while the accuracy should benefit from it. These are one of the few points where we feel we actually succeeded, and the intent of the algorithm actually is reflected in the results. 
 
 In addition to rather poor performance, the algorithm is very complex and utilizes a great deal of dynamic memory allocation, which would make a good, compact hardware implementation hard to implement. Searching algorithms in the combination pool would be hard to do fast, and a hashing function should be considered.
 
