--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,4 +1,4 @@
 This paper investigates a pattern-recognizing prefetcher based on the DCPT prefetching heuristic by Marius Grannae, Magnus Jahre and Lasse Natvig \cite{reference:jahre}. The prefetcher attempts to achieve high accuracy through strict rules for the next prefetch based on previously recognized fetch sequences.
 The algorithm is evaluated by submitting it to a series of selected SPEC CPU2000 benchmarks using a modified version of the M5 open source hardware simulator system.
 
-The algorithm yielded worse performance gains than initially expected, with an overall speedup of 1\%. Two major reasons for this are the strict limits imposed on the storage size available to the prefetcher and the total size of the memory address space. Comparing this algorithm with the original DCPT it is clear that the proposed changes are not satisfactory.
+The prefetcher yielded worse performance gains than initially expected, with an overall speedup of 1\%. Two major reasons for this are the strict limits imposed on the storage size available to the prefetcher and the total size of the memory address space. Comparing this prefetcher with the original DCPT it is clear that the proposed changes are not satisfactory.
