--- a/report/results.tex
+++ b/report/results.tex
@@ -39,7 +39,7 @@ An attempt to do special treatment of the reoccurring scenario linear access was
 
 \begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
-\caption{Prefetcher results without cache size limit}
+\caption{Prefetcher results without pool size limit}
 \label{table:results2}
 \centering
 \begin{tabular}{|l|l|l|l|l|l|l|l|}
@@ -65,7 +65,7 @@ wupwise 	& 1.059 & 	0.791 &	0.343 &	0.187 &	279083 & 	236426\\
 
 
 
-The dcpt algorithm originally proposed in \cite{reference:jahr} was also implemented and tested. For comparison the results are presented in table \ref{table:results3}. As can be seen from the table this implementation is conciderably faster on most benchmarks, and provided an overall avarage speedup of 5.5\%.
+The DCPT algorithm originally proposed in \cite{reference:jahre} was also implemented and tested. For comparison the results are presented in table \ref{table:results3}. As can be seen from the table this implementation is conciderably faster on most benchmarks, and provided an overall avarage speedup of 5.5\%.
 
 \begin{table*}[!t]
 \renewcommand{\arraystretch}{1.3}
