--- a/report/methodology.tex
+++ b/report/methodology.tex
@@ -1,4 +1,4 @@
-The prefetcher was evalued using the given framework which contained a modified version of the M5 open source hardware simulator system. This system uses a selected set of the SPEC CPU2000 bencmarks to evaluate the prefetchers performance \cite{reference:spec}. The specific benchmarks which were executed are given in table \ref{table:results} in the results section. The benchmarks in this table are selected from both the integer and the floating point components of the CPU2000 benchmark, which generate the data to be compared to a set of reference prefetchers. 
+The prefetcher was evaluated using the given framework which contained a modified version of the M5 open source hardware simulator system. This system uses a selected set of the SPEC CPU2000 bencmarks to evaluate the prefetchers performance \cite{reference:spec}. The specific benchmarks which were executed are given in table \ref{table:results}. The benchmarks in this table are selected from both the integer and the floating point components of the CPU2000 benchmark, which generate the data to be compared to a set of reference prefetchers. 
 
 In the framework there is also a python script included which decides the arguments and parameters for the simulation. These predefined arguments are given in table \ref{table:cmdlineopt}.
 
@@ -20,7 +20,7 @@ In the framework there is also a python script included which decides the argume
 \end{tabular}
 \end{table*}
 
-The architecture M5 is simulating is loosely based on the Alpha 21264 microprosessor from the DEC Alpha Tsunami system, which is a superscalar out-of-order CPU. The L1 prefetcher is split in a 32kB instruction cache and a 64kB data cache. Each cache block is 64B. The L2 cache size is 1MB, as defined in table \ref{table:cmdlineopt}, also with a cache block size of 64B. The L2 prefetcher is notified on every access to the L2 cache, both hits and misses, which is also defined in table \ref{table:cmdlineopt}. There is no prefetching for the L1 cache. The memory bus is defined to run at 400MHz with a width of 64 bits and a latency of 30ns \cite{reference:opg}. 
+The architecture that the M5 system is simulating is loosely based on the Alpha 21264 microprosessor from the DEC Alpha Tsunami system, which is a superscalar out-of-order CPU. The L1 prefetcher is split in a 32kB instruction cache and a 64kB data cache. Each cache block is 64B. The L2 cache size is 1MB, as defined in table \ref{table:cmdlineopt}, also with a cache block size of 64B. The L2 prefetcher is notified on every access to the L2 cache, both hits and misses, which is also defined in table \ref{table:cmdlineopt}. There is no prefetching for the L1 cache. The memory bus is defined to run at 400MHz with a width of 64 bits and a latency of 30ns \cite{reference:opg}. 
 
 A HPC cluster called "Kongull" was also avalible to facilitate the M5 system and run the simulations. To increase the efficiency the M5 system was installed on several accounts on the cluster and on a personal computer. This enabled several tests to be run concurrently and independently from one another. The M5 system was also compiled M5 on a personal laptop with a dual-core 1.73GHz Intel Celeron processor running 32 bit CentOS 6.5 with g++ 4.4.7 and python 2.6.6. 
-Regarding the implementation of the actual prefetcher there were some limits to take into account. First of all the allowed size of the prefetcher was limited to a total of 8kB. Since the algorithm is using a set of four integers to store the various delta values and their corresponding data it uses 16B for each entry to the element pool. Taking this into concideration the limit for the numbers of stored elements was set to 448, which totals 7.2kB. This leave 1024B for housekeeping variables, which should be more than enough space to facilitate them.
+Regarding the implementation of the actual prefetcher there were some limits to take into account. First of all the allowed size of the prefetcher was limited to a total of 8kB. Since the algorithm is using a set of four integers to store the various delta values and their corresponding data it uses 16B for each entry to the element pool. Taking this into consideration the limit for the numbers of stored elements was set to 448, which totals 7.2kB. This leave 1024B for housekeeping variables, which should be more than enough space to facilitate them.
