--- a/report/top.tex
+++ b/report/top.tex
@@ -665,6 +665,12 @@
 \bibitem{reference:jahre} M.~Grannaes, M.~Jahre and L.~Natvig \emph{Storage Efficient Hardware Prefetching using Delta-Correlating Prediction Tables},
 \hskip 1em plus 0.5em minus 0.4em\relax Journal of Instruction-Level Parallelism 13 (2011) 1-16
 
+\bibitem{reference:chen} T-F.~Chen and J-L.~Baer \emph{Effective Hardware Based Data Prefetching for High Performance Processors},
+\hskip 1em plus 0.5em minus 0.4em\relax Computers, IEEE Transactions on, vol, 44, pp. 609-623, May 1995
+
+\bibitem{reference:nesbit} K.J.~Nesbit and J.E.~Smith \emph{Data Cache Prefetching Using a Global History Buffer},
+\hskip 1em plus 0.5em minus 0.4em\relax High Performance Computer Architecture, international symposium on, vol. 0, p.96, 2004
+
 \bibitem{reference:opg} \emph{M5 simulator system TDT4260 Computer Architecture User documentation},
 \hskip 1em plus 0.5em minus 0.4em\relax Assignment text
 
@@ -673,13 +679,13 @@
 \bibitem	{reference:edn} John~L.~Hennessy, Stanford University and David A.~Patterson, University of California, Berkeley \emph{Memory Hierarchy Design - Part 1. Basics of Memory Hierarchies}, 2012. http://www.edn.com/design/systems-design/4397051/2/Memory-Hierarchy-Design-part-1. 
 
 \bibitem{reference:intel} Intel Corporation, "Microprocessor Quick Reference Guide", http://www.intel.com/pressroom/kits/quickreffam.htm (Retrieved 3.4.2014)
-\hskip 1em plus 0.5em minus 0.4em\relax Intel8088
+\hskip 1em plus 0.5em minus 0.4em\relax Intel 8088, Quick Reference Guide
 
 \bibitem{reference:inteli7} HardOCP, "Synthethic Benchmarks - Intel i7-3960x", http://hardocp.com/article/2011/11/14/intel\_core\_i73960x\_sandy\_bridge\_e\_processor\_review/4 (Retrieved 3.4.2014)
-\hskip 1em plus 0.5em minus 0.4em\relax inteli7
+\hskip 1em plus 0.5em minus 0.4em\relax Intel i7 Benchmark
 
 \bibitem{reference:8086} M. Sunil \emph{Microprocessor 8086 : Architecture, Programming and Interfacing}, page 654
-\hskip 1em plus 0.5em minus 0.4em\relax 8086 description
+\hskip 1em plus 0.5em minus 0.4em\relax Intel 8086, Comprehensive Guide
 
 \end{thebibliography}
 
